src/index.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    font-family: 'Merriweather', serif;

    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
}

#root {
    padding: 0;
    margin: 0; 
}

.picture-frame.enter .picture-trim {
    opacity: 0.5;
    transform: translate(300%, 300%);
}
.picture-frame.enter-active .picture-trim {
    transform: translate(600%, 600%);
    opacity: 1;
}
.picture-frame.exit .picture-trim {
    opacity: 0.5;
    transform: translate(-300%, -300%);
}
.picture-frame.exit-active .picture-trim {
    opacity: 1;
    transform: translate(-600%, -600%);
}

.picture-frame.enter .picture {
    animation: spin-first 0.25s ease 1 forwards;
}
.picture-frame.enter-active .picture {
    animation: spin-second 0.25s ease 1 forwards;
}
.picture-frame.exit .picture {
    animation: spin-first 0.25s ease 1 forwards;
}
.picture-frame.exit-active .picture {
    animation: spin-second 0.25s ease 1 forwards;
}

.section.enter-active {
    opacity: 0.33;
    transform: translateX(200%);
}
.section.enter-done {
    opacity: 1;
    transform: translateX(0%);
}
.section.exit-active {
    opacity: 0.66;
    transform: translateX(-200%);
}

@layer components {
    .background-image {
        background: url("/campfire.gif");   
        background-size: 125% 125%;   
        background-position: 50% 50%;

        @apply fixed top-0 left-0 w-full h-full bg-no-repeat bg-fixed -z-10;
    }

    .header {
        @apply relative flex justify-center items-center h-full w-full min-w-[320px] p-2 sm:p-6 md:p-10 lg:p-14 overflow-hidden;
    }

    .header-content {
        @apply flex flex-col justify-center items-center w-4/5 sm:h-4/5 h-2/5 overflow-hidden transition-all;
    }

    .slate-card {
        @apply bg-slate-700 bg-opacity-60 text-center rounded-3xl shadow-slate-800 shadow-lg backdrop-blur-xl;
    }

    .hero-header-decor {
        box-shadow: 0 0 0.25em white;
        animation: fade-in 1s ease-in forwards;

        @apply absolute h-[5px] w-[5px] border-2 border-white rounded-[3px] rotate-45;
    }

    .hero-header-decor.left {
        @apply left-2 sm:right-4 md:left-6 lg:left-8
    }

    .hero-header-decor.right {
        @apply right-2 sm:right-4 md:right-6 lg:right-8
    }

    .hero-header-decor:before {
        content: "";
        color: hsl(157, 34%, 61%);
    
        position: absolute;
        left: 0;
        bottom: -4px;
    
        height: 9px;
        width: 1px;
    
        background: currentColor;
    
        border-right: 5px currentColor;
    
        box-shadow: 1em 1em 1rem currentColor;
    
        animation: fade-in 1s ease-in forwards;
    }
       
    .main-header {
        animation: slot-in-left-to-right .5s cubic-bezier(1, 1, 1, 1) forwards;

        @apply m-1 lg:text-9xl md:text-8xl sm:text-7xl text-5xl transition-all select-none pointer-events-none;
    }

    .sub-header {
        animation: slot-in-right-to-left .5s cubic-bezier(1, 1, 1, 1) .25s forwards;

        @apply m-1 text-center lg:text-6xl md:text-5xl sm:text-4xl text-2xl opacity-0 transition-all select-none pointer-events-none;
    }

    .hero-blob {
        animation: blob-rotate 8s ease-in infinite forwards;

        @apply absolute w-[500px] min-w-[320px] aspect-square bg-gradient-to-r from-pink-700 from-25% via-sky-500 via-15% to-purple-500 rounded-full filter blur-2xl opacity-50 -z-10;
    }

    .carousel {
        animation: fade-in 1s ease-in forwards;

        @apply absolute w-4/5 h-[45%] sm:h-4/5 rounded-3xl overflow-hidden -z-10;
    }

    .picture-frame {
        grid-template-columns: repeat(5, 1fr);
        grid-template-rows: repeat(5, 1fr);
        
        @apply grid gap-2 w-full h-full;
    }

    .picture-trim {
        transition: all ease 0.5s;
    }

    .picture {
        transition: all ease 2s;
        @apply w-full h-full rounded-lg;
    }

    .arrow {
        animation: hop-up .5s cubic-bezier(1, 1, 1, 1) 5s forwards;

        @apply absolute flex bottom-0 left-1/2 p-2 bg-slate-600 hover:bg-slate-500 bg-opacity-60 border-[3px] border-slate-700 hover:border-slate-600 rounded-full shadow-slate-600 hover:shadow-md hover:shadow-slate-800 shadow-sm filter backdrop-blur-md opacity-0 hover:scale-125 pointer-events-none -translate-x-1/2 transition-all;
    }

    .main {
        @apply flex items-center justify-center h-full w-full min-w-[320px] min-h-[875px] sm:min-h-[750px] lg:p-12 md:p-10 sm:p-8 p-6 transition-all overflow-hidden;
    }

    .main-content {
        box-shadow: inset 0 0 2em 0 hsl(35, 84%, 55%), 0 0 1.25em 0 hsl(35, 84%, 55%);
        border-color: hsl(35, 84%, 55%);

        animation: build-out 1.75s ease-in-out .25s forwards;

        @apply flex justify-center items-start lg:p-9 md:p-7 sm:px-5 px-3 py-3 border-2  transition-all;
    }

    .main-arrow {
        animation: fade-in 1s ease-in 2s forwards;

        @apply absolute top-1/2 flex items-center justify-center h-7 w-7 sm:h-9 sm:w-9 aspect-square p-1 bg-slate-400 hover:bg-slate-300 bg-opacity-60 hover:bg-opacity-50 border-2 border-slate-500 hover:border-slate-400 rounded-full opacity-0 backdrop-blur-lg transition-all z-10;
    }

    .main-arrow.left {
        @apply -left-5;
    }

    .main-arrow.right {
        @apply -right-5;
    }

    .section {
        animation: fade-in .5s ease-in forwards;

        @apply relative flex flex-col h-full w-full overflow-hidden transition-all;
    }

    .section-headers {
        box-shadow: inset 0 0 4.5em 0 hsl(0, 100%, 50%), 0 0 1.25em 0 hsl(0, 100%, 50%);
        border-color: hsl(0, 100%, 50%); 

        @apply flex flex-col self-center w-fit mx-2 mb-4 p-2 border-2 rounded-2xl;
    }

    .section-header {

        animation: fade-in 1s ease-in forwards;
        color: hsl(0, 100%, 50%);
        text-shadow: 0 0 .5rem currentColor,
                     0 0 .0375em white;

        @apply self-center lg:text-7xl md:text-5xl sm:text-3xl text-xl select-none;
    }

    .section-sub-headers {
        color: hsl(35, 84%, 55%);
        text-shadow: 0 0 1em currentColor,
                     0 0 .0375em white;

        @apply flex gap-2 self-center lg:m-5 md:m-4 sm:m-3 m-2 mb-4 lg:text-2xl md:text-xl sm:text-lg text-sm select-none;
    }

    .section-help {
        animation: fade-in 1s linear 2.5s forwards;

        @apply text-slate-900 text-opacity-60 opacity-0;
    }

    .section-content {
        @apply relative flex-1;
    }

    .article-scroller {
        @apply absolute left-1/2 flex justify-center items-center gap-2 h-full w-full -translate-x-1/4 transition-all;
    }

    .article-trim {
        @apply flex items-center justify-center h-full w-full p-2;
    }

    .article {
        box-shadow: .5em .5em .25em rgba(0, 0, 0, 0.5);

        @apply relative flex flex-col justify-between sm:h-3/5 h-3/5 min-w-[150px] max-w-[300px] bg-white bg-opacity-10 border-slate-400 border-t-[1px] border-l-[1px] border-opacity-50 rounded-3xl overflow-hidden select-none;
    }

    .article-image {
        @apply absolute h-full w-full object-cover opacity-50 translate-y-[150%] -z-10 transition-all;
    }

    .article:hover .article-image,
    .article:focus .article-image {
        @apply translate-y-0;
    }

    .article-header {        
        @apply lg:text-2xl md:text-xl sm:text-lg text-base m-1 opacity-0 transition-all;
    }

    .article:hover .article-header,
    .article:focus .article-header {
        @apply opacity-100;
    }

    .article-headers {
        @apply flex flex-col items-center justify-center lg:text-xl md:text-lg sm:text-base text-sm opacity-0 transition-all;
    }

    .article:hover .article-headers,
    .article:focus .article-headers {
        @apply opacity-100;
    }

    .article-techs {
        @apply flex flex-wrap justify-center items-center gap-x-[5rem] px-10;
    }

    .article-tech {
        @apply m-1 lg:text-lg md:text-base sm:text-sm text-xs;
    }

    .article-links {
        @apply flex justify-around p-2 opacity-0 transition-all;
    }

    .article:hover .article-links,
    .article:focus .article-links {
        @apply opacity-100;
    }

    .article-link {
        @apply rounded-full shadow-slate-700 hover:shadow-sm hover:scale-110;
    }

    .aboutme {
        @apply justify-evenly gap-1 sm:gap-2 md:gap-3 lg:gap-4 pt-3 overflow-y-auto;
    }

    .aboutme p {
        @apply lg:text-xl md:text-lg sm:text-base text-sm text-start indent-7 text-slate-950 select-none;
    }

    .link {
        @apply text-slate-700 hover:text-slate-950 hover:underline;
    }

    .footer {
        @apply flex justify-center sm:h-1/6 h-1/3 w-full min-w-[320px] p-2;
    }

    .footer-content {
        @apply flex flex-col sm:flex-row items-center justify-evenly h-full w-full p-5 sm:p-6 md:p-7 lg:p-8 bg-opacity-50 bg-slate-600 rounded-full;
    }

    .footer-headers {
        @apply flex flex-col flex-1 items-center justify-center w-full sm:w-2/5 h-1/2 sm:h-full;
    }

    .footer-header-main {
        @apply flex items-center justify-center h-1/4 text-xl sm:text-2xl;
    }

    .footer-headers-sub {
        @apply flex items-center justify-center gap-2;
    }

    .footer-header-sub {
        @apply text-sm sm:text-base;
    }

    .footer-links {
        @apply flex flex-col justify-around w-full sm:w-2/5 h-1/2 sm:h-full;
    }

    .footer-links-list {
        @apply flex flex-1 items-center justify-around;
    }

    .footer-link {
        @apply flex items-center justify-center h-full w-full;
    }
}

@keyframes fade-in {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes hop-up {
    from {
        opacity: 0;
        pointer-events: none;
        display: none;
    }

    to {
        display: initial;
        opacity: 1;
        bottom: 2rem;
        pointer-events: all;
    }
}

@keyframes slot-in-left-to-right {
    from {
        transform: translateX(-600%);
        opacity: 0;
    }

    to {
        transform: translateX(0%);
        opacity: 100;
    }
}

@keyframes slot-in-right-to-left {
    from {
        transform: translateX(600%);
        opacity: 0;
    }

    to {
        transform: translateX(0%);
        opacity: 100;
    }
}

@keyframes blob-rotate {
    from {
        rotate: 0deg;
        scale: 1;
    }
    25% {
        scale: 1 1.5;
    }
    50% {
        scale: 1.25 1.75;
    }
    75% {
        scale: 1.5 1;
    }
    to {
        rotate: 360deg;
    }
}

@keyframes spin-first {
    from {
        rotate: 0deg;
    }
    to {
        rotate: -180deg;
    }
}

@keyframes spin-second {
    from {
        rotate: -180deg;
    }
    to {
        rotate: -360deg;
    }
}

@keyframes build-out {
    0% {
        width: 0;
        height: 0;
    }
    12.5% {
        height: 2%;
    }
    50% {
        width: 50%;
    }
    62.5% {
        height: 50%;
    }
    100% {
        width: 100%;
        height: 100%;
    }
}

